[package]
name = "quake-map"
version = "0.1.0"
authors = ["Seth Rader"]
edition = "2021"
description = "Parser for Quake and Quake II .map files"
license = "CC0-1.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/quake-map"
repository = "https://github.com/4LT/quake-map"

[features]
default = ["std"]
std = []

[dev-dependencies]
benchmarking = "^0.4"
libc = "^0.2.182"

[dev-dependencies.semisync-read]
path = "../semisync-read"
